--- a/Project Development Phase/Sprint_1/index.html
+++ b/Project Development Phase/Sprint_1/index.html
@@ -4,34 +4,35 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login Form</title>
+    <title>Sign In...</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
 </head>
+
 <body>
     <div class="wrapper">
-        <header>Login Form</header>
-        <form action="#">
+        <h1>Book a flight!</h1>
+            <form action="#">
             <div class="field email">
                 <div class="input-area">
-                    <input type="text" placeholder="Email Address">
+                    <input type="text" placeholder="Email">
                     <i class="icon fas fa-envelope"></i>
                     <i class="error error-icon fas fa-exclamation-circle"></i>
                 </div>
-                <div class="error error-txt">Email can't be blank</div>
+                <div class="error error-txt">Email is required!!</div>
             </div>
             <div class="field password">
                 <div class="input-area">
-                    <input type="password" placeholder="Password">
+                    <input type="password" placeholder="Passcode">
                     <i class="icon fas fa-lock"></i>
                     <i class="error error-icon fas fa-exclamation-circle"></i>
                 </div>
-                <div class="error error-txt">Password can't be blank</div>
+                <div class="error error-txt">Password is required!!</div>
             </div>
             <div class="pass-txt"><a href="#">Forgot password?</a></div>
             <input type="submit" value="Login">
         </form>
-        <div class="sign-txt">Didn't have an account? <a href="#">Signup now</a></div>
+        <div class="sign-txt"> Not registered yet!! <a href="#">Signup </a></div>
     </div>
 
     <script src="script.js"></script>
